# SarvGyan

./: .gitignore  README.md  SETUP.md  app.py  pyproject.toml
.streamlit/: config.toml
notebooks/: README.md  backend_test.ipynb
notebooks/.ipynb_checkpoints/: backend_test-checkpoint.ipynb
notebooks/data/chroma_db/: chroma.sqlite3
prompts/: qa_prompt.txt  summary_prompt.txt
src/: __init__.py  document_processor.py  embeddings.py  llm_handler.py  qa_chain.py  utils.py  vector_store.py
